[package]
name = "sangchin_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
redis = { version = "0.26.1", features = ["tokio-comp"] }
mime = "0.3.17"
warp = "0.3.7"
reqwest = { version = "0.12.7", features = ["stream"]}

[[bin]]
name = "webserver"
path = "src/bin/webserver.rs"

[[bin]]
name = "bot"
path = "src/bin/bot.rs"
